# Aura

./: AndroidManifest.xml  CMakeLists.txt  Makefile  Makefile.linux  README
Apps/android/: AndroidManifest.xml
Apps/android/res/values/: strings.xml
Aura/include/Controllers/: GameLogicController.h  PhysicsController.h
Aura/include/Factories/: MLBFactory.h
Aura/include/MAO/: MAO.h  MAOProperty.h  MAORenderable2DImage.h
Aura/include/MLB/Actuator/: MLBActuatorAddDynamicObject.h  MLBActuatorQuitApp.h
Aura/include/MLB/Controller/: MLBController.h
Aura/include/MLB/Sensor/: MLBSensor.h  MLBSensorProperty.h  MLBSensorRandom.h
Aura/source/Controllers/: GameLogicController.cpp
Aura/source/Kernel/Parsers/: MSLParser.y  MSLScanner.l
Aura/source/MAO/: MAOProperty.cpp  MAORenderable2DText.cpp
Aura/source/MLB/Actuator/: MLBActuatorQuitApp.cpp  MLBActuatorRelativePose.cpp  MLBActuatorSound.cpp
CMake/: ConfigOgreKit.cmake
bullet/src/.svn/: wc.db
jni/include/Factories/: TrackingMethodFactory.h
jni/include/MAO/: MAOPositionator3D.h  MAORenderable2DText.h  MAORenderable3DModel.h
jni/include/MLB/: MLB.h
jni/source/: Makefile.linux
jni/source/Controllers/: PhysicsController.cpp
jni/source/Kernel/: Logger.cpp
jni/source/MAO/: MAOMarksGroup.cpp
lib/ARToolKit/: Makefile
minerva_ogre/: Makefile
minerva_ogre/include/Controllers/: GameLogicController.h  InputEventController.h  PhysicsController.h
minerva_ogre/include/Factories/: MAOFactory.h  MLBFactory.h
minerva_ogre/include/Kernel/: GLDebugDrawer.h  PathPoint.h  PhysicDynamicObject.h  PhysicObject.h  VideoSource.h  World.h
minerva_ogre/include/MAO/: MAO.h  MAOMark.h  MAOMarksGroup.h  MAOPositionator3D.h  MAOProperty.h  MAORenderable2D.h  MAORenderable2DText.h  MAORenderable3D.h  MAORenderable3DLine.h  MAORenderable3DModel.h  MAORenderable3DPath.h  MAOValue.h
minerva_ogre/include/MLB/: MLB.h
minerva_ogre/include/MPY/: MGEModule.h  MPYWrapper.h  WrapperTypes.h
minerva_ogre/lib/ARToolKit/: README.txt
minerva_ogre/lib/bullet-2.78/: CMakeCache.txt  Makefile  bullet.pc  cmake_install.cmake
minerva_ogre/source/: Makefile  minerva.cpp  player.cpp
minerva_ogre/source/Controllers/: GameLogicController.cpp  InputEventController.cpp  PhysicsController.cpp
minerva_ogre/source/Factories/: MAOFactory.cpp  MLBFactory.cpp  TrackingMethodFactory.cpp
minerva_ogre/source/Kernel/: GLDebugDrawer.cpp  PathPoint.cpp  PhysicDynamicObject.cpp  PhysicObject.cpp  World.cpp
minerva_ogre/source/MAO/: MAO.cpp  MAOMark.cpp  MAOMarksGroup.cpp  MAOPositionator3D.cpp  MAORenderable2D.cpp  MAORenderable2DImage.cpp  MAORenderable2DText.cpp  MAORenderable3D.cpp  MAORenderable3DLine.cpp  MAORenderable3DModel.cpp  MAORenderable3DPath.cpp  MAOValue.cpp
minerva_ogre/source/MLB/: MLB.cpp
minerva_ogre/source/MPY/: MGEModule.cpp  MPYWrapper.cpp  WrapperTypes.cpp
source/: CMakeLists.txt
source/Apps/: CMakeLists.txt
source/Apps/SDK/iOS/: make_ios.sh
source/Apps/Test/: CMakeLists.txt
source/Apps/Test/android/Shared/: CMakeLists.txt  Main.cpp
source/Apps/Test/android/app/: .cproject  .project  AndroidManifest.xml
source/Apps/Test/android/app/jni/: Android.mk  Application.mk  Aura-native.cpp
source/Apps/Test/android/app/res/values/: strings.xml
source/Apps/Test/android/app/src/com/nvidia/devtech/: NvActivity.java
source/Apps/Test/android/app/src/org/aura/jni/: Aura.java  Main.java
source/Apps/Test/data/: OgreKitStartup.cfg
source/Apps/Test/linux/: CMakeLists.txt
source/Apps/Test/source/: Main.cpp
source/Apps/TestApp/: CMakeLists.txt  TestApp.cpp  TestApp.h  main.cpp  resources.cfg  resources.cfg.android
source/Apps/TestApp/media/: BackgroundFp.glsl  Cloud.material  Ground.material  Sinbad.material  SinbadName.material  Tree.material  cloud.tga  sinbad_clothes.tga  sinbad_sword.tga  tree.tga
source/Apps/TestApp/misc/: Info.plist
source/Apps/TestApp/sound/: game.ckb  music.cks
source/CMake/: ConfigGameKit.cmake  ConfigOgreKit.cmake  Dependencies.cmake  TemplateCompiler.cmake
source/CMake/Templates/: Android.mk.in  Android.mk_app.in  Android.mk_engine.in  AndroidManifest.xml.in  Android_resources.cfg.in  Aura.java.in  OgreKitSettings.in  resources.cfg.in
source/CMake/Utils/: OgreConfigTargets.cmake
source/CMake/toolchain/: android.toolchain.cmake
source/Dependencies/: CMakeLists.txt
source/Engine/: #Android.mk#  Aura.h  AuraApplication.cpp  AuraApplication.h  AuraApplication_OSX.h  AuraApplication_iOS.h  AuraAudioController.cpp  AuraAudioController.h  AuraEngine.cpp  AuraEngine.h  AuraEngineAndroid.cpp  AuraEngineAndroid.h  AuraEngineIOS.h  AuraIOEngine.cpp  AuraIOEngine.h  AuraIOEngineAndroid.cpp  AuraIOEngineAndroid.h  AuraIOListener.h  AuraJNIUtils.cpp  AuraJNIUtils.h  AuraLog.cpp  AuraLog.h  AuraOgreEngine.cpp  AuraOgreEngine.h  AuraOgreEngineAndroid.cpp  AuraOgreEngineAndroid.h  AuraOgreEngineWinRT.h  AuraQCARController.cpp  AuraQCARController.h  CMakeLists.txt  ShaderController.cpp  ShaderController.h  ShaderGeneratorTechniqueResolverListener.h  Singleton.h  gkCommon.h  gkEngine.cpp  gkEngine.h  gkPath.cpp  gkPath.h  gkUserDefs.cpp  (+6 more)
source/Engine/Android/: AuraIOEngineAndroid.h  AuraJNIUtils.cpp  AuraJNIUtils.h  gkWindowAndroid.cpp
source/Engine/IOS/: AuraEngineIOS.cpp  AuraEngineIOS.h
source/Ogre-1.8rc/: CMakeLists.txt
source/Ogre-1.8rc/RenderSystems/: CMakeLists.txt
source/Ogre-1.9a/: CMakeLists.txt
source/Ogre-1.9a/OgreMain/include/: OgrePlatform.h
source/Ogre-1.9a/OgreMain/src/Android/JNI/: OgreActivityJNI.cpp
source/Ogre-1.9a/RenderSystems/GLES2/include/: OgreGLES2HardwareBufferManager.h
source/Ogre-1.9a/RenderSystems/GLES2/src/: OgreGLES2FrameBufferObject.cpp
source/Ogre-1.9a/build_android/include/: OgreBuildSettings.h
source/Ogre-1.9a/build_ios/include/: OgreBuildSettings.h
source/cricket-1.0.31/inc/ck/: audiocallback.h  bank.h  ck.h  config.h  customfile.h  customstream.h  mixer.h  pathtype.h  platform.h  sound.h
source/cricket-1.0.31/inc/ck/objc/: audiocallback.h  bank.h  mixer.h  sound.h
source/vuforia-2.0/include/QCAR/: QCAR.h
(+115 files in other folders)
